--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 					<div class="resume-item mb-4">
 						
 						<p style="color: rgb(226, 210, 210);">I am a self-motivated computer science
-							 graduate who is seeking for the opportunity 
+							 post graduate who is seeking for the opportunity 
 							 to work in a fun and challenging environment 
 							 that will encourage me to improve and learn 
 							 new and necessary skills to do my best for the
