--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 					<div class="resume-item mb-4">
 						<span class="date" ><span class="icon-calendar"></span> 2014 - 2017</span>
 						<h3>BACHELOR OF SCIENCE</h3>
-						<span class="school" style="color: rgb(250, 244, 244);">Dr. BR Ambedkar University Agra</span>
+						<span class="school" style="color: rgb(250, 244, 244);">St. John's College, Agra</span>
 						<p style="color: rgb(226, 210, 210);">I have completed this graduation degree in Physics, Mathematics 
 							and Computer science with overall percentage 64.38% .</p>
 						
