--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<li class="nav-item"><a class="nav-link" href="#section-home">Home</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-about">About</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-resume">Resume</a></li>
-					<li class="nav-item"><a class="nav-link" href="#section-portfolio">Certifications</a></li>
+					<li class="nav-item"><a class="nav-link" href="#section-certificate">Certifications</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-contact">Contact</a></li>
 				</ul>
 			</div>
@@ -369,9 +369,9 @@
   
 	  </div>
 	</section>
-	<!-- .section 
+	
 
-	<section class="site-section" id="section-portfolio">
+	<section class="site-section" id="section-certificate">
 		<div class="container">
 			<div class="row">
 				<div class="section-heading text-center col-md-12">
@@ -401,7 +401,7 @@
 			  
 
 			
-	</section>-->
+	</section>
 	<!-- ------------------------------------------------>
 	<section id="section-contact" class="contact">
 		<div class="container">
