--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 							</div>
 				
 					
-					<p class="lead" style="color: rgb(226, 210, 210);">I am a Computer Science Post Graduate (Pursuing ) from Dr. A.P.J. Abdul Kalam Technical University , Lucknow.</p>
+					<p class="lead" style="color: rgb(226, 210, 210);">I am a Computer Science Post Graduate from Dr. A.P.J. Abdul Kalam Technical University , Lucknow.</p>
 					<ul style="color: rgb(226, 210, 210);">
 						<li><strong>Birthday:</strong> 27 March 1997</li>
 						<li><strong>City:</strong> Agra, Uttar Pradesh</li>
