--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 						<span class="date"><span class="icon-calendar"></span> Jan 2021 - Present</span>
 						<h3>Junior Software Engineer</h3>
 						<span class="school"style="color: rgb(250, 244, 244);">IndianPacific</span>
-						<span class="school"style="color: rgb(250, 244, 244);"> Ahmedabad , Gujrat</span>
+						<span class="school"style="color: rgb(250, 244, 244);"> Ahmedabad , Gujarat</span>
 						<p><ul style="color: rgb(226, 210, 210);">
 							<li>Working on JAVA & React JS Development
 					  
